kustomize/prod/requests.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: perfanalyzer
spec:
  template:
    spec:
      containers:
        - name: perfanalyzer
          resources:
            limits:
              cpu: 1500m
              memory: 1Gi
            requests:
              cpu: 1500m
              memory: 1Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codeanalyzer
spec:
  template:
    spec:
      containers:
        - name: codeanalyzer
          resources:
            limits:
              cpu: 460m
              memory: 512Mi
            requests:
              cpu: 460m
              memory: 512Mi
